fix alignment issues in index

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,16 @@ dd>p {
         margin: auto;
     }
 
+    #mainstuff>div.grid.about {
+        display: grid;
+        grid-template-columns: 25% 25vw 30vw;
+        align-items: center;
+    }
+
+    #mainstuff>div.grid.about>div>p {
+        text-align: center;
+    }
+
     /* .grid img {
         -webkit-box-shadow: 0 0 0 0 #845460;
         box-shadow: 0 0 0 0 #845460;
@@ -327,7 +337,15 @@ dd>p {
     dl.container {
         display: flex;
         flex-wrap: wrap;
-        /* gap: 5px 10px; */
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin-left: -6%;
+        margin-right: -6%;
+    }
+
+    .term {
+        width: 40vw;
+        padding: 20px;
     }
 
     dt {
